@@ -131,8 +131,13 @@ class mcc152(Hat): # pylint: disable=invalid-name,too-many-public-methods
             c_ubyte, c_ubyte, POINTER(c_ubyte)]
         self._lib.mcc152_dio_config_read_port.restype = c_int
 
-        if self._lib.mcc152_open(self._address) != self._RESULT_SUCCESS:
-            self._initialized = False
+        result = self._lib.mcc152_open(self._address)
+
+        if result == self._RESULT_SUCCESS:
+            self._initialized = True
+        elif result == self._RESULT_INVALID_BOARD:
+            raise HatError(self._address, "Invalid board type.")
+        else:
             raise HatError(self._address, "Board not responding.")
 
         return
