@@ -1,5 +1,8 @@
 1.1.0.3:
     - Cleared up some memory allocation errors reported by valgrind.
+    - Set the value returned by open functions when trying to open the 
+    wrong type of board to RESULT_INVALID_DEVICE (or an appropriate 
+    exception message in Python.)
 
 1.1.0.2:
     - Fixed an issue with high CPU usage when waiting for a trigger on the
